--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="leonov.html">Артур хафизов</a>
+      <a class="link-header" href="about.html">Артур хафизов</a>
     </header>
     <main>
       <nav>
